  - Prominence M2 and M3 has damage and lockon time split over 2 and 3 missiles, respectively.
  - Leniency and lockon hold time increased for Prominence M2 and M3
  - Stampede models inherently aim up a bit to make it easier to aim.
  - Ammo capacity increased by 1 for UMAX and UMAZ
  - Damage increased by 500 for UMAZ
  - Recoil animation removed from PX50 Bound Shot.

WING DIVER
  - All LAZR models penetrates through enemies (including LARG-V).
  - Redued spread on all Thunder Bows by 30%.
  - Momentum inheritance reduced to 1/5 for all particle cannons.
  - Energy cost reduced by 25% all particle cannons.
  - All LRSL models penetrates through enemies (including SIG Sniper).
  - Rate of fire on Monster and Monster-S reduced from 60/s to 20/s.
  - Damage increased 50% for all homing weapons.
  - Energy cost reduced by 25% for all homing weapons.
  - Plasma Grenade Σ costs no energy.
  - Ghost Chaser's projectiles live twice as long.
  - Special weapons energy cost reduced by 50%.

FENCER
  - Vibro Roller is considerably faster in most aspects.
  - Flashing Spear has a 50% increased range.
  - Spine Driver has a 20% increased range.
  - Reduced spread Dexter Automatic Shotguns by 30%.
  - Reduced spread Cannon Shot by 15%.
  - Damage increased by 50% for all Mortars
  - Mortars inherently aim up a bit to make aiming more natural.
  - Light Mortars get jump boosters equipped instead of zoom.
  - Added dash booster to Arm Hound.
  - Blast Radius on Arcane 6-Barrel increased by 60%.
  - Added jump booster to High Altitude Impact Missiles.

AIR RAIDER
  - All support posts will reload in the background. (Not Life Vendor or guns.)
  - Response time for Cannon (Artillery Squad) strikes reduced by 75%.
  - Cannon (Artillery Squad) starts fully reloaded.
  - Cannon (Artillery Squad) changed to a rapid blitz where every shot lands within the same two seconds.
  - All Air Whale strikes reload over time instead of using credits.