@@ -18,6 +18,8 @@ RANGER
   - Ammo capacity increased by 1 for UMAX and UMAZ
   - Damage increased by 500 for UMAZ
   - Recoil animation removed from PX50 Bound Shot.
+  - C24-C70 Bombs has been cloned for use with Ranger.
+  - Y10-Y21 Mines have been cloned for use with Ranger.
 
 WING DIVER
   - All LAZR models penetrates through enemies (including LARG-V).
